<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kasilov.andrew.solidrobot.MainActivity">


    <TextView
        android:id="@+id/tv_indicator_robot_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="Robot off"
        android:textColor="@color/colorRed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_indicator_battery_plugged_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/battery_plugged_out"
        android:textColor="@color/colorRed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_indicator_robot_on" />

    <TextView
        android:id="@+id/tv_indicator_charging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/not_charging"
        android:textColor="@color/colorRed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_indicator_battery_discharged" />

    <TextView
        android:id="@+id/tv_indicator_moving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/not_moving"
        android:textColor="@color/colorRed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_indicator_charging" />

    /

    <TextView
        android:id="@+id/tv_indicator_battery_discharged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/battery_discharged"
        android:textColor="@color/colorRed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_indicator_battery_plugged_in" />

    <ToggleButton
        android:id="@+id/btn_robot_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textOff="@string/turn_on_robot"
        android:textOn="@string/turn_off_robot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_indicator_moving" />

    <Button
        android:id="@+id/btn_new_type_battery_injection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/new_type_battery"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_robot_power" />

    <ToggleButton
        android:id="@+id/btn_charging_device_injection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textOff="Plug in charging device"
        android:textOn="Plug out charging device"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_plug_out_battery" />

    <Button
        android:id="@+id/btn_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/move"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_charging_device_injection" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5052083"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imv_battery_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_indicator_battery_discharged"
        app:layout_constraintTop_toBottomOf="@+id/tv_indicator_battery_plugged_in"
        app:srcCompat="@drawable/red_circle" />

    <Button
        android:id="@+id/btn_old_type_battery_injection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/old_type_battery"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_robot_power" />

    <Button
        android:id="@+id/btn_plug_out_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="Plug out battery"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_old_type_battery_injection" />


</android.support.constraint.ConstraintLayout>
